deploy/external-dns.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mastodon-external-dns
  namespace: mastodon
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mastodon-external-dns
    spec:
      serviceAccountName: external-dns
      containers:
      - name: external-dns
        image: registry.opensource.zalan.do/teapot/external-dns:latest
        args:
        - --source=ingress
        - --domain-filter=$(LOCAL_DOMAIN)
        - --provider=google
        - --registry=txt
        - --txt-owner-id=extdns
