deploy/postgres-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mastodon-postgres
  namespace: mastodon
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mastodon-postgres
    spec:
      volumes:
        - name: mastodon-postgres-data
          persistentVolumeClaim:
            claimName: mastodon-postgres
      containers:
        - name: postgres
          image: postgres:11.1-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: mastodon-postgres-data
              mountPath: /var/lib/postgresql/data
