deploy/redis-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mastodon-redis
  namespace: mastodon
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mastodon-redis
    spec:
      volumes:
        - name: mastodon-redis-data
          persistentVolumeClaim:
            claimName: mastodon-redis
      containers:
        - name: redis
          image: redis:5-stretch
          resources:
            requests:
              memory: 64Mi
              cpu: 50m
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: mastodon-redis-data
              mountPath: /data
