deploy/sidekiq-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mastodon-sidekiq
  namespace: mastodon
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mastodon-sidekiq
    spec:
      containers:
        - name: sidekiq
          image: tootsuite/mastodon:v2.7.4
          command: ["bash", "-c", "echo \"${CAFILE_RB}\" > config/initializers/cafile.rb && bundle exec rails assets:precompile && bundle exec sidekiq -q default -q mailers -q pull -q push"]
          resources:
            requests:
              memory: 128Mi
              cpu: 50m
