deploy/streaming-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mastodon-streaming
  namespace: mastodon
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mastodon-streaming
    spec:
      containers:
        - name: streaming
          image: tootsuite/mastodon:v2.7.1
          command: ["yarn", "start"]
          ports:
            - name: streaming
              containerPort: 4000
          resources:
            requests:
              memory: 32Mi
              cpu: 25m
