deploy/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mastodon
  namespace: mastodon
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 64m
spec:
  tls:
    - secretName: mastodon-cert
      hosts:
        - zax.cloud
  backend:
    serviceName: mastodon-web
    servicePort: 3000
  rules:
  - host: zax.cloud
    http:
      paths:
      - path: /api/v1/streaming
        backend:
          serviceName: mastodon-streaming
          servicePort: 4000
      - path: /
        backend:
          serviceName: mastodon-web
          servicePort: 3000
